--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,29 @@
 CHANGES
 =======
 
+* Update comment
+* Delete nightworkflow.py
+
+0.3.16
+------
+
+* [Upgrade] Version bump to [0.3.16]
+* change default value
+
+0.3.15
+------
+
+* [Upgrade] Version bump to [0.3.15]
+* [Bug fix] Fix \`yaml\_load\` & \`yaml\_dump\` used in anypath
+* To keep up
+
+0.3.14
+------
+
+* [Upgrade] Version bump to [0.3.14]
+* Clean up
+* Use relative path in \`yaml\_dum\`&\`yaml\_load\`
+
 0.3.13
 ------
 
