--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
 CHANGES
 =======
 
+v0.4.19
+-------
+
+* [Upgrade] Bump version (0.4.18 -> 0.4.19)
+* Move requirements to .txt file
+
 v0.4.18
 -------
 
