--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,20 @@
 CHANGES
 =======
 
+* update
+
+v0.5.0
+------
+
+* [Upgrade] Bump version (0.4.9 -> 0.5.0)
+* Create LICENSE
+* remove LICENSE
+
+v0.4.28
+-------
+
+* [Upgrade] Bump version (0.4.27 -> 0.4.28)
+
 v0.4.27
 -------
 
